--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
 baseURL = 'http://blog.harymomchilov.xyz/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
+publishDir = "docs"
+theme = "hugo-theme-shell"
