--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,4 @@ baseURL = 'http://blog.harymomchilov.xyz/'
 languageCode = 'en-us'
 title = 'Zahari Momchilov Portfolio'
 publishDir = "docs"
-theme = "hugo-theme-shell"
+theme = "shell"
